<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView2"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/your_song_is"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameSong"
        android:layout_width="316dp"
        android:layout_height="120dp"
        android:text=" "
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/play"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pause"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSong"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/pause"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSong"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/errorSongBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/error_song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSong" />
</androidx.constraintlayout.widget.ConstraintLayout>